--- a/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/mq002/estilos/paisagem.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /* Estilo para telas deitadas */
+
+body {
+    background: url(../../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+}
