--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /* Estilo para telas em pé */
+
+body {
+    background: url(../../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+}
